--- a/enjoy.html
+++ b/enjoy.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What I Enjoy</title>
     <link rel="stylesheet" href="enjoy.css">
+    <link rel="stylesheet" href="main-styles.css">
     <!-- <link rel="stylesheet" href="experience_styles.css"> -->
 </head>
 <body>
@@ -67,7 +68,10 @@
                     <source src="resources/kickflip.MP4" type="video/MP4">
                     <source src="resources/kickflip.webm" type="video/webm">
                 </video>
-                <div class="clip"></div>
+                <video controls class="trick"> 
+                    <source src="resources/manny.mp4" type="video/MP4">
+                    <source src="resources/manny.mp4" type="video/webm">
+                </video>
                 <div class="clip"></div>
             </section>
         </section>
