--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="main-styles.css">
 </head>
 <body>
     <header> 
@@ -22,6 +23,10 @@
     <main>
         <h1 id="contact-me"> Contact Me </h1>
         <div class="grid">
+            <!-- <picture>
+                <source media="min-width: 900px" srcset="resources/phone.jpg"> 
+                <source media="" >
+            </picture> -->
             <img src="resources/phone.jpg" alt="phone">
             <h3> 310-779-5359 </h3>
             <img src="resources/email.jpg" alt="email">
@@ -30,5 +35,9 @@
             <h3> @aarontcohen </h3>
         </div>
     </main>
+    <footer class="foot">
+        <h3 class="thanks"> Thank you for visiting! Come again anytime. </h3>
+        <h3 class="copyright"> &#169 2022 </h3>
+    </footer>
 </body>
 </html>
