--- a/experiences.html
+++ b/experiences.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiences</title>
     <link rel="stylesheet" href="experience_styles.css">
+    <link rel="stylesheet" href="main-styles.css">
 </head>
 <body>
     <header> 
