--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <ul class="navbar">
             <a href="index.html"> <li> About </li> </a>
             <a href="experiences.html"> <li> Experiences </li> </a>
-            <a href="enjoy.html"> <li>What I Enjoy</li> </a>
+            <a href="developer.html"> <li>Developer Portfolio</li> </a>
             <a href="contact.html"> <li>Contact Me</li> </a>
         </ul>
     </nav>
@@ -28,7 +28,7 @@
                 <source media="" >
             </picture> -->
             <img src="resources/phone.jpg" alt="phone">
-            <h3> 310-779-5359 </h3>
+            <h3> US / Whatsapp: 310-779-5359 </h3>
             <img src="resources/email.jpg" alt="email">
             <h3> atcohen60@gmail.com </h3>
             <img src="resources/insta.jpg" alt="insta">
