--- a/experiences.html
+++ b/experiences.html
@@ -16,53 +16,97 @@
         <ul class="navbar">
             <a href="index.html"> <li> About </li> </a>
             <a href="experiences.html"> <li> Experiences </li> </a>
-            <a href="enjoy.html"> <li>What I Enjoy</li> </a>
+            <a href="developer.html"> <li>Developer Portfolio</li> </a>
             <a href="contact.html"> <li>Contact Me</li> </a>
         </ul>
     </nav>
     <main>
-        <section class="economics container">
-            <h1>Economics</h1>
-            <aside>
-                <img src="resources/royce.jpg" alt="royce" id="royce">
-            </aside>
-            <article>
-                <p> I recently graduated with a degree in economics from UCLA. I learned lots of basic micro and macro economics concepts.
-                    Although I didn't go down the finance or investment banking pathway (except for one internship), I hope that I can make use of 
-                    these financial thinking skills at some point in my career. 
-                </p>
-            </article>
+        <section class="brightcode experience">
+            <h1> Brightcode Full Stack Bootcamp (2022) </h1>
+            <h2> Full Stack Development Student </h2>
+            <div class="container"> 
+                <aside>
+                    <img src="resources/experis.jpg" alt="experis" id="experis">
+                </aside>
+                <article>
+                    <p>
+                        Brightcode is an initiative by Birthright Labs, the Israeli Innovation Authority and Experis Israel. The program seeks to train a cohort of students from all over the world to be Full Stack Developers and assist in their relocation to Israel. The training is five months, which is followed by a job placement with a two year work term in Israel.
+                    </p>
+                    <br> 
+                    <p> The course included training for the following topics: </p>
+                    <table class="technology-table"> 
+                        <tr> 
+                            <td> <img src="resources/techs/python.jpg" alt="python"> </td>
+                            <td> Python</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/html.png" alt="html"> </td>
+                            <td> HTML 5</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/css.png" alt="css"> </td>
+                            <td> CSS </td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/javascript.png" alt="javascript"> </td>
+                            <td> Javscript </td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/react.png" alt="react"> </td>
+                            <td> React</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/mongo.png" alt="mongo"> </td>
+                            <td> MongoDB</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/node.png" alt="node"> </td>
+                            <td> Node JS</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/github.png" alt="github"></td>
+                            <td> Github</td>
+                        </tr>
+                    </table>
+
+                </article>
+            </div>
         </section>
-        <section class="marketing container">
-            <h1>Marketing</h1>
-            <aside>
-                <img src="resources/maesa.jpg" alt="maesa" id="maesa">
-            </aside>
-            <article>
-                <p> My most recent work experience was as an intern for a beauty marketing company. I worked the job
-                    part-time for a year between the summer after my junior year and the start of the summer after I graduated. I thought this 
-                    was a great experience for me to work within a team more frequently and learn to communicate more effectively in a work 
-                    setting. I also enjoyed the work itself -- thinking about trends and making predictions within the men's grooming space.
-                    Specifically, as one of the fewer men on the marketing team, they had me giving insight and direction into their newest 
-                    men's brand -- a progressive hair day brand for men at retail. 
-            </article>
+        <section class="marketing experience">
+            <h1>Maesa LLC (2021 - 2022) </h1>
+            <h2>Marketing Intern </h2>
+            <div class="container"> 
+                <aside>
+                    <img src="resources/maesa.jpg" alt="maesa" id="maesa">
+                </aside>
+                <article>
+                    <p> My most recent work experience was as an intern for a beauty marketing company. I enjoyed thinking about trends and making predictions within the men's grooming space.
+                        Specifically, as one of the fewer men on the marketing team, I was an asset for advising about their newest 
+                        men's brand -- a progressive hair day brand for men at retail. 
+                    </p>
+                    <br> 
+                    <p> My responsibilities included: </p>
+                    <ul class="maesa-responsibilities"> 
+                        <li> Creating aesthetically appealing presentations that are presented to retail clients considering stocking our brands and products</li>
+                        <li> Present to company executives regarding brand viability and vision</li>
+                        <li> Research male consumer dynamics and trends through use of statistical data and IRI revenue reports</li>
+                    </ul>
+                </article>
+            </div>
         </section>
-        <section class="international container">
-            <h1>International</h1>
-            <aside>
-                <img src="resources/barca.jpg" alt="barcelona" id="barcelona">
-            </aside>
-            <article>
-                <p>
-                    I also have interest and experience living and working internationally. My first international experience was a 
-                    month long study abroad experience in Spain, where I was able to practice Spanish that I learned growing up in high 
-                    school. I enjoyed speaking to people with different experiences and perspectives than me. 
-                </p>
-                <p>
-                    I am looking forward to living and working internationally again soon in 2023 in Israel. I'm looking forward to the 
-                    new perspectives and experiences that I will encounter. 
-                </p>
-            </article>
+        <section class="economics experience">
+            <h1>University of California, Los Angeles (2018 - 2022) </h1>
+            <h2> BA Economics </h2>
+            <div class="container"> 
+                <aside>
+                    <img src="resources/royce.jpg" alt="royce" id="royce">
+                </aside>
+                <article>
+                    <p> 
+                        In 2022, graduated from UCLA with Bachelor of Arts in Economics and a Minor in Cognitive Science
+                    </p>
+                </article>
+            </div> 
         </section>
     </main>
     <footer class="foot">
