--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         <ul class="navbar">
             <a href="index.html"> <li> About </li> </a>
             <a href="experiences.html"> <li> Experiences </li> </a>
-            <a href="enjoy.html"> <li>What I Enjoy</li> </a>
+            <a href="developer.html"> <li>Developer Portfolio</li> </a>
             <a href="contact.html"> <li>Contact Me</li> </a>
         </ul>
     </nav>
     <main class="container">
         <aside class="ronpic">
-            <img src="resources/primitive_ron.jpg" alt="primitive_ron">
+            <img src="resources/test-profile.jpg" alt="formal_aaron">
         </aside>
         <article class="about">
-            <p> Hi, I'm Aaron. Some of my friends call me Ron.</p>
+            <p> Hi, I'm Aaron.</p>
             <p> 
-                This is the first "portfolio" am am developing for myself in the start to my journey as a 
-                developer. This site will showcase some of my past experiences interests ranging from work, college, and general in life. 
+                This is the first portfolio I am developing for myself as a 
+                developer. This site will showcase some of my past experiences and interests including work, college, and other extracurriculars. 
             </p>
             <p>
                 I have multi-disciplinary experience, and a ranging set of strengths. I have experience with marketing and brand creation, 
                 working in a beauty marketing position in college before starting my journey as a developer. I have always possessed an
                 interest in consumer product development -- specifically fashion. However, I love the challenge and correctness of software
-                development. After taking three courses in college and enjoying the process of development, I was insprired to try to continue
+                development. After taking three courses in college and enjoying the process of development, I was inspired to try to continue
                 learning and growing. I would love to find a position where I could combine some of my creative and technical interests. 
             </p>
             <p>
