--- a/developer.html
+++ b/developer.html
@@ -22,6 +22,56 @@
         </ul>
     </nav>
     <main>
+        <section class="coderoom experience">
+            <h1> Online Code Editor Classroom </h1>
+            <h2> built with MERN stack and socket.io </h2>
+            <div class="container"> 
+                <aside>
+                    <img src="resources/codeblock.png" alt="code-block" id="codeblock">
+                </aside>
+                <article>
+                    <p>
+                        I developed a small website modeling an code editor. First user to enter the room is the teacher and can edit and the changes are live streamed to the other participants in the room who can see the live changes.  
+                    </p>
+                    <h2> <a href="https://move-task-frontend.onrender.com" class="proj-link"> Link to this project </a>  </h2>
+                    <p>  Technologies used in this project: </p>
+                    <table class="tech-used-table"> 
+                        <tr> 
+                            <td> <img src="resources/techs/html.png" alt="html"> </td>
+                            <td> HTML 5</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/css.png" alt="css"> </td>
+                            <td> CSS </td>
+                        </tr>`
+                        <tr> 
+                            <td> <img src="resources/techs/javascript.png" alt="javascript"> </td>
+                            <td> Javscript </td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/react.png" alt="react"> </td>
+                            <td> React</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/mongo.png" alt="mongo"> </td>
+                            <td> MySql</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/node.png" alt="node"> </td>
+                            <td> Node JS with Express</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/github.png" alt="github"></td>
+                            <td> Github</td>
+                        </tr>
+                        <tr> 
+                            <td> <img src="resources/techs/docker.png" alt="docker"></td>
+                            <td> Docker </td>
+                        </tr>
+                    </table>
+                </article>
+            </div>
+        </section>
         <section class="brightcode experience">
             <h1> Online Shoe Store Project </h1>
             <h2> built with MERN stack </h2>
